implemented scheduled fetching related entities